styles.css
@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Golos+Text:wght@400;500;600;700;800;900&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  width: 100vw;
}

p, button {
  font-family: 'Golos Text', sans-serif;
}

h1 {
  font-family: 'Merriweather', sans-serif;
}

.section-1 {
  width: 100vw;
  background-color: #E9DED4;
  height: 700px;
  background-image: url("./Assets/section-1-graphics.png");
  background-position-x: center;
}

.section-1 .text-container {
  /* border: 1px solid black; */
  margin-left: auto;
  margin-right: auto;
  padding-top: 26px;
  transform: translateX(-338px);
  width: 544px;
  color: #313131;
}

.section-1 h1 {
  margin-top: 56px;
  font-size: 60px;
  font-weight: 400;
  line-height: 110%;
}

.section-1 .text-indentation-1 {
  margin-left: 91px;
}

.section-1 .text-indentation-2 {
  margin-left: 34px;
}

.section-1-info-text {
  font-size: 18px;
  text-align: center;
  margin-top: 25px;
  line-height: 130%;
  margin-right: 2px;
}

.section-1-graphics {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
}

.section-1 .buttons-container {
  display: flex;
  gap: 17px;
  margin-top: 40px;
  padding-right: 2px;
}

.section-1 .buttons-container button {
  width: 100%;
  height: 72px;
  border-radius: 40px;
  border: 2px #1F1F1F solid;
  font-size: 16px;
  line-height: 130%;
  color: #1F1F1F;
  transition: 0.1s;
}

.section-1 .buttons-container button.support {
  background-color: #1F1F1F;
  color: white;
  cursor: pointer;
}

.section-1 .buttons-container button.support:hover {
  background-color: #FBCE51;
  color:#1F1F1F;
  border: 2px #FBCE51 solid;
}

.section-1 .buttons-container button.more-info {
  background: none;
  cursor: pointer;
}

.section-1 .buttons-container button.more-info:hover {
  background-color: #1F1F1F;
  color: white
}


.running-line {
  height: 60px;
  background-color: #F54932;
  position: relative;
  overflow: hidden;
  display: flex;
  align-items: center;
}

.running-line .text {
  color: white;
  display: flex;
  white-space: nowrap;
  font-family: 'Merriweather', sans-serif;
  font-size: 22px;
  text-transform: uppercase;
  flex-shrink: 0;
  animation: text-running-animation 30s linear infinite;
}

.running-line .text span{
  margin-right: 35px;
}

.running-line .text span::after{
  display: inline-block;
  content: "";
  position: relative;
  width: 6px;
  height: 6px;
  left: 17px;
  bottom: 5px;
  border-radius: 50%;
  background-color: white;
}

@keyframes text-running-animation {
  0%{
    transform: translateZ(0);
  }
  100%{
    transform: translate3d(-100%, 0 ,0);
  }
  
}

